004-phonebook-web-application/cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloudformation template for Phonebook Application.

Resources:
  WebServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Phonebook #required
      GroupName: String
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
  WebServerHost:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-07d9160fa81ccffb5
      InstanceType: t2.micro
      KeyName: ami
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData:
        Fn::Base64: !Sub
          - |
            #! bin/bash
            yum update -y
            yum install python3 -y
            pip3 install flask
            pip3 install flask_mysql
            echo "${MyDBURI}" > /home/ec2-user/dbserver.endpoint
          - MyDBURI: !GetAtt MyDatabaseServer.Endpoint.Adress

  MyDBSecurityGroup:
    Type: "AWS::RDS::DBSecurityGroup"
    Properties:
      DBSecurityGroupIngress: #required
        - EC2SecurityGroupId: !GetAtt WebServerSecurityGroup.GroupId
        - CIDRIP: 0.0.0.0/0
      GroupDescription: Frontend Access #required

  MyDatabaseServer:
    Type: "AWS::RDS::DBInstance"
    Properties:
      AllocatedStorage: 20
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: 0
      DBInstanceClass: db.t2.micro #required
      DBInstanceIdentifier: phonebook-db-server
      DBName: phonebook
      DBParameterGroupName: String
      DBSecurityGroups:
        - !Ref MyDBSecurityGroup
      DeletionProtection: false
      Engine: MySQL
      EngineVersion: 8.0.19
      MasterUserPassword: henry_1
      MasterUsername: admin
      MonitoringInterval: 0
      MultiAZ: false
      Port: 3306
      PubliclyAccessible: Boolean

Outputs:
  WebSiteURL:
    Description: Phonebook App URL
    Value: !Sub
      - http://${PublicAdress}
      - PublicAdress: !GettAtt WebServerHost.PublicDnsName
    Export:
      Name:
